[package]
name = "ded"
version = "0.1.0"
authors = ["Sindre Johansen <sindreij@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = {version="0.2", features=["nightly"]}
js-sys = "0.3.4"
derivative = "1.0.1"

[dependencies.web-sys]
version="0.3.2"
features = [
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
  'EventListener',
  'EventTarget',
  'Event',
  'KeyboardEvent',
  'MouseEvent',
  'CssStyleDeclaration',
]
