[package]
name = "ded"
version = "0.1.0"
authors = ["Sindre Johansen <sindreij@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = {version="0.2", features=["nightly"]}
js-sys = "0.3.4"
itertools = "0.7.8"
lazy_static = "1.1.0"

[dependencies.web-sys]
version="0.3.2"
features = [
  'console',
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'EventListener',
  'EventTarget',
  'Event',
  'KeyboardEvent',
  'MouseEvent',
  'CssStyleDeclaration',
  'Performance'
]
